--- a/src/components/Tab/tab.css
+++ b/src/components/Tab/tab.css
@@ -1,5 +1,5 @@
 :host {
-  --sgds-tab-theme-color: var(--sgds-primary);
+  --tab-theme-color: var(--sgds-primary);
   display: inline-block;
 }
 
@@ -35,8 +35,8 @@ ul {
 
 .nav-link:not(.disabled).tabs-info-toggle.active,
 .nav-link:not(.disabled).tabs-info-toggle:hover {
-  border-color: var(--sgds-tab-theme-color);
-  color: var(--sgds-tab-theme-color);
+  border-color: var(--tab-theme-color);
+  color: var(--tab-theme-color);
   font-weight: 700;
 }
 
@@ -66,7 +66,7 @@ ul {
 .nav-link:not(.disabled).tabs-basic-toggle.active,
 .nav-link:not(.disabled).tabs-basic-toggle:hover {
   color: var(--sgds-white);
-  background-color: var(--sgds-tab-theme-color);
+  background-color: var(--tab-theme-color);
 }
 
 .nav-link.disabled {
@@ -87,7 +87,7 @@ ul {
 
 .nav-link:not(.disabled):not(.tabs-basic-toggle):not(.tabs-info-toggle).active,
 .nav-link:not(.disabled):not(.tabs-basic-toggle):not(.tabs-info-toggle):hover {
-  border-bottom: 0.125rem solid var(--sgds-tab-theme-color);
+  border-bottom: 0.125rem solid var(--tab-theme-color);
   font-weight: 700;
   background-color: transparent;
 }
