--- a/src/components/Badge/badge.css
+++ b/src/components/Badge/badge.css
@@ -1,99 +1,99 @@
 :host {
   /* NEW in 2.0 */
-  --sgds-badge-color: var(--sgds-white);
-  --sgds-badge-bg: ;
-  --sgds-badge-border-color: transparent;
+  --badge-color: var(--sgds-white);
+  --badge-bg: ;
+  --badge-border-color: transparent;
 }
 
 :host([variant="primary"]) {
-  --sgds-badge-bg: var(--sgds-primary-filled);
+  --badge-bg: var(--sgds-primary-filled);
 }
 :host([variant="secondary"]) {
-  --sgds-badge-bg: var(--sgds-secondary-filled);
+  --badge-bg: var(--sgds-secondary-filled);
 }
 :host([variant="warning"]) {
-  --sgds-badge-bg: var(--sgds-warning-filled);
+  --badge-bg: var(--sgds-warning-filled);
 }
 :host([variant="danger"]) {
-  --sgds-badge-bg: var(--sgds-danger-filled);
+  --badge-bg: var(--sgds-danger-filled);
 }
 :host([variant="success"]) {
-  --sgds-badge-bg: var(--sgds-success-filled);
+  --badge-bg: var(--sgds-success-filled);
 }
 :host([variant="info"]) {
-  --sgds-badge-bg: var(--sgds-info-filled);
+  --badge-bg: var(--sgds-info-filled);
 }
 :host([variant="light"]) {
-  --sgds-badge-bg: var(--sgds-light-filled);
-  --sgds-badge-color: var(--sgds-dark);
+  --badge-bg: var(--sgds-light-filled);
+  --badge-color: var(--sgds-dark);
 }
 :host([variant="dark"]) {
-  --sgds-badge-bg: var(--sgds-dark-filled);
+  --badge-bg: var(--sgds-dark-filled);
   
 }
 :host([variant="primary"][outlined]) {
-  --sgds-badge-color: var(--sgds-primary-text-emphasis);
-  --sgds-badge-bg: var(--sgds-primary-bg-subtle);
-  --sgds-badge-border-color: var(--sgds-primary-border-subtle);
+  --badge-color: var(--sgds-primary-text-emphasis);
+  --badge-bg: var(--sgds-primary-bg-subtle);
+  --badge-border-color: var(--sgds-primary-border-subtle);
 }
 :host([variant="secondary"][outlined]) {
-  --sgds-badge-color: var(--sgds-secondary-text-emphasis);
-  --sgds-badge-bg: var(--sgds-secondary-bg-subtle);
-  --sgds-badge-border-color: var(--sgds-secondary-border-subtle);
+  --badge-color: var(--sgds-secondary-text-emphasis);
+  --badge-bg: var(--sgds-secondary-bg-subtle);
+  --badge-border-color: var(--sgds-secondary-border-subtle);
 }
 :host([variant="warning"][outlined]) {
-  --sgds-badge-color: var(--sgds-warning-text-emphasis);
-  --sgds-badge-bg: var(--sgds-warning-bg-subtle);
-  --sgds-badge-border-color: var(--sgds-warning-border-subtle);
+  --badge-color: var(--sgds-warning-text-emphasis);
+  --badge-bg: var(--sgds-warning-bg-subtle);
+  --badge-border-color: var(--sgds-warning-border-subtle);
 }
 :host([variant="danger"][outlined]) {
-  --sgds-badge-color: var(--sgds-danger-text-emphasis);
-  --sgds-badge-bg: var(--sgds-danger-bg-subtle);
-  --sgds-badge-border-color: var(--sgds-danger-border-subtle);
+  --badge-color: var(--sgds-danger-text-emphasis);
+  --badge-bg: var(--sgds-danger-bg-subtle);
+  --badge-border-color: var(--sgds-danger-border-subtle);
 }
 :host([variant="success"][outlined]) {
-  --sgds-badge-color: var(--sgds-success-text-emphasis);
-  --sgds-badge-bg: var(--sgds-success-bg-subtle);
-  --sgds-badge-border-color: var(--sgds-success-border-subtle);
+  --badge-color: var(--sgds-success-text-emphasis);
+  --badge-bg: var(--sgds-success-bg-subtle);
+  --badge-border-color: var(--sgds-success-border-subtle);
 }
 :host([variant="info"][outlined]) {
-  --sgds-badge-color: var(--sgds-info-text-emphasis);
-  --sgds-badge-bg: var(--sgds-info-bg-subtle);
-  --sgds-badge-border-color: var(--sgds-info-border-subtle);
+  --badge-color: var(--sgds-info-text-emphasis);
+  --badge-bg: var(--sgds-info-bg-subtle);
+  --badge-border-color: var(--sgds-info-border-subtle);
 }
 :host([variant="light"][outlined]) {
-  --sgds-badge-color: var(--sgds-light-text-emphasis);
-  --sgds-badge-bg: var(--sgds-light-bg-subtle);
-  --sgds-badge-border-color: var(--sgds-light-border-subtle);
+  --badge-color: var(--sgds-light-text-emphasis);
+  --badge-bg: var(--sgds-light-bg-subtle);
+  --badge-border-color: var(--sgds-light-border-subtle);
 }
 :host([variant="dark"][outlined]) {
-  --sgds-badge-color: var(--sgds-dark-text-emphasis);
-  --sgds-badge-bg: var(--sgds-dark-bg-subtle);
-  --sgds-badge-border-color: var(--sgds-dark-border-subtle);
+  --badge-color: var(--sgds-dark-text-emphasis);
+  --badge-bg: var(--sgds-dark-bg-subtle);
+  --badge-border-color: var(--sgds-dark-border-subtle);
 }
 
 .badge {
-  --sgds-badge-padding-x: 0.571em;
-  --sgds-badge-padding-y: 0.285em;
-  --sgds-badge-font-size: min(0.875em, 2rem);
-  --sgds-badge-font-weight: 700;
-  --sgds-badge-border-radius: var(--sgds-border-radius);
-  --sgds-badge-border-width: var(--sgds-border-width);
-  --sgds-badge-line-height: 1.145;
-  --sgds-badge-icon-gap: var(--sgds-spacer-2);
-  background-color: var(--sgds-badge-bg);
-  border: var(--sgds-badge-border-width) solid var(--sgds-badge-border-color);
-  border-radius: var(--sgds-badge-border-radius);
-  color: var(--sgds-badge-color);
+  --badge-padding-x: 0.571em;
+  --badge-padding-y: 0.285em;
+  --badge-font-size: min(0.875em, 2rem);
+  --badge-font-weight: 700;
+  --badge-border-radius: var(--sgds-border-radius);
+  --badge-border-width: var(--sgds-border-width);
+  --badge-line-height: 1.145;
+  --badge-icon-gap: var(--sgds-spacer-2);
+  background-color: var(--badge-bg);
+  border: var(--badge-border-width) solid var(--badge-border-color);
+  border-radius: var(--badge-border-radius);
+  color: var(--badge-color);
   display: inline-flex;
-  font-size: var(--sgds-badge-font-size);
-  font-weight: var(--sgds-badge-font-weight);
-  line-height: var(--sgds-badge-line-height);
-  padding: var(--sgds-badge-padding-y) var(--sgds-badge-padding-x);
+  font-size: var(--badge-font-size);
+  font-weight: var(--badge-font-weight);
+  line-height: var(--badge-line-height);
+  padding: var(--badge-padding-y) var(--badge-padding-x);
   text-align: center;
   vertical-align: baseline;
   white-space: nowrap;
-  gap: var(--sgds-badge-icon-gap);
+  gap: var(--badge-icon-gap);
 }
 
 .rounded-pill {
