--- a/src/components/Mainnav/mainnav-item.css
+++ b/src/components/Mainnav/mainnav-item.css
@@ -1,5 +1,5 @@
 :host {
-  --sgds-mainnav-item-border-bottom-width: 0.125rem;
+  --mainnav-item-border-bottom-width: 0.125rem;
 }
 li {
   height: 100%;
@@ -8,15 +8,15 @@ a.nav-link {
   display: flex;
   cursor: pointer;
   color: var(--sgds-body-color);
-  border-bottom: var(--sgds-mainnav-item-border-bottom-width) solid transparent;
+  border-bottom: var(--mainnav-item-border-bottom-width) solid transparent;
   min-height: 100%;
   align-items: center;
   padding: 0;
   text-decoration: none;
   &.active,
   &:hover {
-    color: var(--sgds-mainnav-theme-color);
-    border-color: var(--sgds-mainnav-theme-color);
+    color: var(--mainnav-theme-color);
+    border-color: var(--mainnav-theme-color);
   }
   &:focus-visible {
     box-shadow: 0 0 0 0.25rem rgba(89, 66, 219, 0.25);
