--- a/src/components/Sidenav/sidenav-link.css
+++ b/src/components/Sidenav/sidenav-link.css
@@ -1,27 +1,27 @@
 :host {
-  --sgds-sidenav-link-font-size: var(--sgds-body-font-size);
-  --sgds-sidenav-link-padding-x: 1rem;
-  --sgds-sidenav-link-padding-y: 0.5rem;
-  --sgds-sidenav-link-disabled-color: var(--sgds-disabled-color);
+  --sidenav-link-font-size: var(--sgds-body-font-size);
+  --sidenav-link-padding-x: 1rem;
+  --sidenav-link-padding-y: 0.5rem;
+  --sidenav-link-disabled-color: var(--sgds-disabled-color);
 }
 
 a.nav-link {
   display: block;
   color: inherit;
-  font-size: var(--sgds-sidenav-link-font-size);
-  padding-top: var(--sgds-sidenav-link-padding-y);
-  padding-bottom: var(--sgds-sidenav-link-padding-y);
-  padding-left: calc(var(--sgds-sidenav-link-padding-y) * 4 + var(--sgds-sidenav-item-btn-border-left-width));
+  font-size: var(--sidenav-link-font-size);
+  padding-top: var(--sidenav-link-padding-y);
+  padding-bottom: var(--sidenav-link-padding-y);
+  padding-left: calc(var(--sidenav-link-padding-y) * 4 + var(--sidenav-item-btn-border-left-width));
   padding-right: 0;
   text-decoration: none;
 }
 a.nav-link.active,
 a.nav-link:hover {
-  color: var(--sgds-sidenav-theme-color);
+  color: var(--sidenav-theme-color);
 }
 
 a.nav-link.disabled {
-  color: var(--sgds-sidenav-link-disabled-color);
+  color: var(--sidenav-link-disabled-color);
   pointer-events: none;
   cursor: not-allowed;
 }
