--- a/src/components/Sidenav/sidenav.css
+++ b/src/components/Sidenav/sidenav.css
@@ -1,6 +1,6 @@
 :host {
-  --sgds-sidenav-theme-color: var(--sgds-primary);
-  --sgds-sidenav-sticky-top: 0rem;
+  --sidenav-theme-color: var(--sgds-primary);
+  --sidenav-sticky-top: 0rem;
 }
 
 div {
@@ -14,7 +14,7 @@ div {
 
 .sticky {
   position: sticky;
-  top: var(--sgds-sidenav-sticky-top);
-  height: calc(100vh - var(--sgds-sidenav-sticky-top));
+  top: var(--sidenav-sticky-top);
+  height: calc(100vh - var(--sidenav-sticky-top));
   overflow-y: auto;
 }
