docs(stories): update wip

--- a/src/components/Datepicker/datepicker-input.css
+++ b/src/components/Datepicker/datepicker-input.css
@@ -1,10 +1,10 @@
-
-:host{
-    --sgds-input-border-radius: var(--sgds-border-radius) 0 0 var(--sgds-border-radius);
-}
 .input-container {
-    display: flex;
-    flex-direction: row;
-    width: -webkit-fill-available;
-    width: -moz-available;
+  display: flex;
+  flex-direction: row;
+  width: -webkit-fill-available;
+  width: -moz-available;
+}
+
+.form-control {
+  border-radius: var(--sgds-border-radius) 0 0 var(--sgds-border-radius);
 }
