--- a/src/components/Badge/badge.css
+++ b/src/components/Badge/badge.css
@@ -1,172 +1,91 @@
 :host {
-  --sgds-badge-color: var(--sgds-default-color-on-dark);
   --sgds-badge-bg: var(--sgds-primary-bg);
+  --sgds-badge-color: var(--sgds-default-color-on-dark);
   --sgds-badge-border-radius: var(--sgds-border-radius-sm);
+  display: inline-flex;
 }
 
-:host([variant="info"]) {
-  --sgds-badge-bg: var(--sgds-primary-bg);
+:host([variant="success"]) {
+  --sgds-badge-bg: var(--sgds-success-bg);
   --sgds-badge-color: var(--sgds-default-color-on-dark);
-  --sgds-badge-border-color: var(--sgds-primary-bg); 
-  
+}
+
+:host([variant="danger"]) {
+  --sgds-badge-bg: var(--sgds-danger-bg);
+  --sgds-badge-color: var(--sgds-default-color-on-dark);
+}
+
+:host([variant="warning"]) {
+  --sgds-badge-bg: var(--sgds-warning-bg);
+  --sgds-badge-color: var(--sgds-default-color-on-dark);
+}
+
+:host([variant="neutral"]) {
+  --sgds-badge-bg: var(--sgds-neutral-bg);
+  --sgds-badge-color: var(--sgds-default-color-on-dark);
 }
 
 :host([variant="info"][outlined]) {
   --sgds-badge-bg: var(--sgds-primary-bg-subtle);
   --sgds-badge-color: var(--sgds-default-color-on-light);
   --sgds-badge-border-color: var(--sgds-primary-border-color-subtle);
-  
-}
-
-:host([variant="success"]) {
-  --sgds-badge-bg: var(--sgds-success-bg);
-  --sgds-badge-color: var(--sgds-default-color-on-dark);
-  --sgds-badge-border-color: var(--sgds-success-bg);
 }
 
 :host([variant="success"][outlined]) {
   --sgds-badge-bg: var(--sgds-success-bg-subtle);
   --sgds-badge-color: var(--sgds-default-color-on-light);
   --sgds-badge-border-color: var(--sgds-success-border-color-subtle);
- 
-}
-
-:host([variant="danger"]) {
-  --sgds-badge-bg: var(--sgds-danger-bg);
-  --sgds-badge-color: var(--sgds-default-color-on-dark);
-  --sgds-badge-border-color: var(--sgds-danger-bg);
 }
 
 :host([variant="danger"][outlined]) {
   --sgds-badge-bg: var(--sgds-danger-bg-subtle);
   --sgds-badge-color: var(--sgds-default-color-on-light);
   --sgds-badge-border-color: var(--sgds-danger-border-color-subtle);
-  
-}
-
-:host([variant="warning"]) {
-  --sgds-badge-bg: var(--sgds-warning-bg);
-  --sgds-badge-color: var(--sgds-default-color-on-dark);
-  --sgds-badge-border-color: var(--sgds-warning-bg);
 }
 
 :host([variant="warning"][outlined]) {
   --sgds-badge-bg: var(--sgds-danger-bg-subtle);
   --sgds-badge-color: var(--sgds-default-color-on-light);
   --sgds-badge-border-color: var(--sgds-danger-border-color-subtle);
-
-}
-
-:host([variant="neutral"]) {
-  --sgds-badge-bg: var(--sgds-neutral-bg);
-  --sgds-badge-color: var(--sgds-default-color-on-dark);
-  --sgds-badge-border-color: var(--sgds-neutral-bg); 
 }
 
 :host([variant="neutral"][outlined]) {
   --sgds-badge-bg: var(--sgds-neutral-bg-subtle);
   --sgds-badge-color: var(--sgds-default-color-on-light);
   --sgds-badge-border-color: var(--sgds-neutral-border-color-subtle);
-
 }
-
 
 .badge {
   background-color: var(--sgds-badge-bg);
   color: var(--sgds-badge-color);
-  border: var(--sgds-border-width-1) solid var(--sgds-badge-border-color);
+  border: var(--sgds-border-width-1) solid var(--sgds-default-border-color-transparent);
   border-radius: var(--sgds-badge-border-radius);
-  line-height: var(--sgds-dimension-24); 
+  font-size: var(--sgds-font-size-1);
   padding: 0 var(--sgds-padding-2-xs);
-  min-width: var(---sgds-dimension-24); 
+  height: var(--sgds-dimension-24);
+  min-width: var(---sgds-dimension-24);
   display: inline-flex;
   justify-content: center;
   align-items: center;
   padding: 0px var(--sgds-padding-2-xs);
 }
 
+.badge.outlined {
+  border: var(--sgds-border-width-1) solid var(--sgds-badge-border-color);
+}
+
 .badge-label {
-  padding-left: var(--sgds-padding-2-xs);
-  padding-right: var(--sgds-badge-label-padding-x-right, var(--sgds-padding-2-xs));
+  padding: 0px var(--sgds-padding-2-xs);
 }
 
 .badge-dismissible {
-  --sgds-badge-label-padding-x-right: var(--sgds-padding-xs);
+  padding-right: 0;
 }
-
 
 .badge-dimissible sgds-close-button {
-  --sgds-close-btn-border-radius: var(--sgds-border-radius-lg);
+  --sgds-close-btn-border-radius: var(--sgds-badge-border-radius);
 }
 
-.left-icon {
-  size: var(--sgds-icon-size-sm);
-  padding-right:  var(--sgds-padding-3-xs);
-
-}
-
-
-
-
-/* [data-bs-theme="dark"] .badge.text-bg-primary {
-  --sgds-primary-rgb: var(--sgds-primary-500-rgb);
-}
-[data-bs-theme="dark"] .badge.text-bg-secondary {
-  --sgds-secondary-rgb: var(--sgds-secondary-500-rgb);
-}
-[data-bs-theme="dark"] .badge.text-bg-success {
-  --sgds-success-rgb: var(--sgds-success-500-rgb);
-}
-[data-bs-theme="dark"] .badge.text-bg-info {
-  --sgds-info-rgb: var(--sgds-info-500-rgb);
-}
-[data-bs-theme="dark"] .badge.text-bg-warning {
-  --sgds-warning-rgb: var(--sgds-warning-500-rgb);
-}
-[data-bs-theme="dark"] .badge.text-bg-danger {
-  --sgds-danger-rgb: var(--sgds-danger-500-rgb);
-}
-[data-bs-theme="dark"] .badge.text-bg-light {
-  color: var(--sgds-gray-600) !important;
-}
-[data-bs-theme="dark"] .badge.text-bg-dark {
-  --sgds-dark-rgb: var(--sgds-gray-500-rgb);
-}
-[data-bs-theme="dark"] .badge-outline.text-bg-primary {
-  --sgds-primary-rgb: var(--sgds-primary-800-rgb);
-  border: 1px solid var(--sgds-primary-500);
-  color: var(--sgds-primary-200) !important;
-}
-[data-bs-theme="dark"] .badge-outline.text-bg-secondary {
-  --sgds-secondary-rgb: var(--sgds-secondary-800-rgb);
-  border: 1px solid var(--sgds-secondary-500);
-  color: var(--sgds-secondary-200) !important;
-}
-[data-bs-theme="dark"] .badge-outline.text-bg-success {
-  --sgds-success-rgb: var(--sgds-success-800-rgb);
-  border: 1px solid var(--sgds-success-500);
-  color: var(--sgds-success-200) !important;
-}
-[data-bs-theme="dark"] .badge-outline.text-bg-info {
-  --sgds-info-rgb: var(--sgds-info-800-rgb);
-  border: 1px solid var(--sgds-info-500);
-  color: var(--sgds-info-200) !important;
-}
-[data-bs-theme="dark"] .badge-outline.text-bg-warning {
-  --sgds-warning-rgb: var(--sgds-warning-800-rgb);
-  border: 1px solid var(--sgds-warning-500);
-  color: var(--sgds-warning-200) !important;
-}
-[data-bs-theme="dark"] .badge-outline.text-bg-danger {
-  --sgds-danger-rgb: var(--sgds-danger-800-rgb);
-  border: 1px solid var(--sgds-danger-500);
-  color: var(--sgds-danger-200) !important;
-}
-[data-bs-theme="dark"] .badge-outline.text-bg-light {
-  color: var(--sgds-gray-600) !important;
-}
-[data-bs-theme="dark"] .badge-outline.text-bg-dark {
-  --sgds-dark-rgb: var(--sgds-gray-800-rgb);
-  border: 1px solid var(--sgds-gray-500);
-  color: var(--sgds-gray-200) !important;
+/* .left-icon {
+  font-size: var(--sgds-icon-size-sm);
 } */
